# risk-trade-platform

./: README.md
limit-order-book-sim/src/: cli.py  experiments.py  matching_engine.py  metrics.py  order_book.py  simulator.py  tagged.py  types.py
limit-order-book-sim/src/strategies/: market_maker.py
limit-order-book-sim/tests/: test_cancel.py  test_fifo.py  test_matching.py
risk-trade-platform/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
risk-trade-platform/apps/api/: main.py
risk-trade-platform/apps/api/routes/: dashboard_api.py  dashboard_page.py  events.py  limits_api.py  report_api.py  risk.py  risk_runs_api.py  status_api.py  trades.py
risk-trade-platform/core/controls/: limits.py
risk-trade-platform/core/risk/: aggregate.py  book.py  dv01.py
risk-trade-platform/infra/db/: models.py  session.py
risk-trade-platform/tests/unit/: test_health.py
