[project]
name = "risk-trade-platform"
version = "0.1.0"
description = "Trade capture + risk + limits platform"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "sqlalchemy>=2.0",
  "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "httpx",
  "ruff",
  "mypy"
]

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true
